--- a/app/assets/style/base/_base.scss
+++ b/app/assets/style/base/_base.scss
@@ -4,3 +4,7 @@ body{
     font-family: 'Noto Sans TC', sans-serif;
     font-family: 'Roboto', sans-serif;
 }
+h1{
+    font-size: 64px;
+    line-height: 96px;
+}
