--- a/app/assets/style/all.scss
+++ b/app/assets/style/all.scss
@@ -8,7 +8,12 @@
 // components
 @import './components/container';
 @import './components/fontSetting';
+@import './components/btn';
+@import './components/title';
 
 // layout
 @import './layout/nav';
 @import './layout/footer';
+
+// pages
+@import './pages/index';
