--- a/app/assets/style/components/_container.scss
+++ b/app/assets/style/components/_container.scss
@@ -1,4 +1,8 @@
+*, ::after, ::before{
+    box-sizing: border-box;
+}
+
 .container{
-    max-width: 67.5vw;
+    max-width: 67.5%;
     margin: 0 auto;
 }
