--- a/app/assets/style/components/_fontSetting.scss
+++ b/app/assets/style/components/_fontSetting.scss
@@ -1,4 +1,5 @@
 .font{
+    // color
     &--white{
         color: white;
     }
@@ -7,5 +8,26 @@
     }
     &--red{
         color: $subColor;
+    }
+    // size
+    &--16{
+        font-size: 16px;
+        line-height: 24px;
+    }
+    &--20{
+        font-size: 20px;
+        line-height: 30px;
+    }
+    &--24{
+        font-size: 24px;
+        line-height: 36px;
+    }
+    &--36{
+        font-size: 36px;
+        line-height: 54px;
+    }
+    // weight
+    &--bold{
+        font-weight: bold;
     }
 }
