--- a/app/assets/style/base/_base.scss
+++ b/app/assets/style/base/_base.scss
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC&family=Roboto&display=swap');
 
+*, ::after, ::before{
+    box-sizing: border-box;
+}
+
 body{
     font-family: 'Noto Sans TC', sans-serif;
     font-family: 'Roboto', sans-serif;
