--- a/app/assets/style/components/_fontSetting.scss
+++ b/app/assets/style/components/_fontSetting.scss
@@ -31,3 +31,24 @@
         font-weight: bold;
     }
 }
+
+@media (max-width: 767px){
+    .phone\:font{
+        &--16{
+            font-size: 16px;
+            line-height: 24px;
+        }
+        &--20{
+            font-size: 20px;
+            line-height: 30px;
+        }
+        &--24{
+            font-size: 24px;
+            line-height: 36px;
+        }
+        &--36{
+            font-size: 36px;
+            line-height: 54px;
+        }
+    }
+}
