--- a/app/layout.ejs
+++ b/app/layout.ejs
@@ -6,15 +6,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title><%- title %></title>
-  <link rel="stylesheet" href="./assets/style/all.css">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined"
       rel="stylesheet">
+  <link rel="stylesheet" href="./assets/style/all.css">
 </head>
 
 <body>
   <header class="header">
     <div class="container headerWrap">
       <img src="./assets/images/logo-white.png" alt="logo" class="logo">
+      <div class="burgerMenu">
+        <span class="material-icons-outlined font--white">
+          menu
+          </span>
+      </div>
       <ul class="menu">
         <li><a href="#">系列鏡框</a></li>
         <li><a href="#">門市據點</a></li>
@@ -30,13 +35,20 @@
   <footer class="footer">
     <div class="container">
       <div class="block1">
-        <ul class="bottomMenu">
-          <li class="bottomMenu__item"><a href="" class="font--white">首頁</a></li>
-          <li class="bottomMenu__item"><a href="" class="font--white">系列鏡框</a></li>
-          <li class="bottomMenu__item"><a href="" class="font--white">門市據點</a></li>
-          <li class="bottomMenu__item"><a href="" class="font--white">部落格</a></li>
-          <li class="bottomMenu__item"><a href="" class="font--white">常見問題</a></li>
-        </ul>
+        <div>
+          <ul class="bottomMenu">
+            <li class="bottomMenu__item"><a href="" class="font--white">首頁</a></li>
+            <li class="bottomMenu__item"><a href="" class="font--white">系列鏡框</a></li>
+            <li class="bottomMenu__item"><a href="" class="font--white">門市據點</a></li>
+            <li class="bottomMenu__item"><a href="" class="font--white">部落格</a></li>
+            <li class="bottomMenu__item"><a href="" class="font--white">常見問題</a></li>
+          </ul>
+          <div class="contactInfo">
+            <p class="contactus font--white"><span class="material-icons-outlined contactus__icon font--36">call</span>0800-000-000</p>
+            <p class="contactus font--white"><span class="material-icons-outlined contactus__icon font--36">email</span>glasses@business.com</p>
+          </div>
+        </div>
+        
         <ul class="socialIcons">
           <li class="socialIcons__icon"><a href=""><img src="./assets/images/ic-social-fb.png" alt="ic-social-fb"></a></li>
           <li class="socialIcons__icon"><a href=""><img src="./assets/images/ic_social_ig.png" alt="ic_social_ig"></a></li>
@@ -45,11 +57,6 @@
       </div>
 
       <div class="block2">
-        <p class="contact font--white"><span class="material-icons-outlined">call</span>0800-000-000</p>
-        <p class="contact font--white"><span class="material-icons-outlined">email</span>glasses@business.com</p>
-      </div>
-
-      <div class="block3">
         <p class="copyright font--white">Copyright © 2020 Glasses.All rights reserved.</p>
         <ul class="policy">
           <li><a href="" class="font--white">隱私權政策</a></li>
