--- a/app/assets/style/components/_fontSetting.scss
+++ b/app/assets/style/components/_fontSetting.scss
@@ -9,6 +9,9 @@
     &--red{
         color: $subColor;
     }
+    &--black{
+        color: black;
+    }
     // size
     &--16{
         font-size: 16px;
