--- a/app/assets/style/components/_container.scss
+++ b/app/assets/style/components/_container.scss
@@ -6,25 +6,19 @@
     &--sm{
         max-width: 636px;
     }
+    @include tablet(){
+        max-width: 768px;
+        padding: 0 36px;
+    }
+    @include mobile(){
+        max-width: 375px;
+        padding: 0 14px;
+    }
 }
 
 .block{
     padding: 80px 0;
-}
-
-@media (max-width:992px){
-    .container{
-        max-width: 768px;
-        padding: 0 37px;
-    }
-}
-
-@media(max-width: 767px){
-    .container{
-        max-width: 375px;
-        padding: 0 14px;
-    }
-    .block{
+    @include mobile(){
         padding: 40px 0;
     }
 }
