--- a/app/assets/style/layout/_nav.scss
+++ b/app/assets/style/layout/_nav.scss
@@ -1,60 +1,21 @@
-.header{
-    background-color: $subColor;
-}
-.headerWrap{
+.glassesMenu{
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-.menu{
-    display: flex;
-    justify-content: space-between;
-    font-size: 20px;
-    line-height: 30px;
+    justify-content: center;
+    &__item{
+        width: 33%;
+        border: 1px solid #DCDCDC;
+        &--active{
+            border-bottom: 8px solid $subColor;
+        }
+    }
     a{
         display: block;
-        color: white;
         text-decoration: none;
-        padding: 25px 32px;
-    }
-    li:last-child{
-        a{
-            padding-right: 0;
-        }
-    }
-}
-.burgerMenu{
-    display: none;
-    padding: 20px 0;
-    span{
-        font-size: 40px;
-        line-height: 40px;
-    }
-}
-
-.logo{
-    width: 80px;
-}
-
-@media(max-width:767px){
-    .headerWrap{
-        flex-wrap: wrap;
-    }
-    .burgerMenu{
-        display: block;
-        cursor: pointer;
-    }
-    .menu{
-        display: none;
-        width: 100%;
-        a{
-            width: 100%;
-            text-align: center;
-        }
-        li:last-child{
-            a{
-                padding-right: 32px;
-            }
-        }
+        padding: 24px 0;
+        font-size: 32px;
+        line-height: 48px;
+        text-align: center;
+        color: black;
+        font-weight: bold;
     }
 }
