--- a/app/layout2.ejs
+++ b/app/layout2.ejs
@@ -21,14 +21,21 @@
           </span>
       </div>
       <ul class="menu">
-        <li><a href="#">系列鏡框</a></li>
+        <li><a href="./optical.html">系列鏡框</a></li>
         <li><a href="#">門市據點</a></li>
         <li><a href="#">部落格</a></li>
         <li><a href="#">常見問題</a></li>
       </ul>
     </div>
-    
   </header>
+
+  <nav> 
+    <ul class="glassesMenu container">
+      <li class="glassesMenu__item"><a href="./optical.html" class="<%= current == 'optical' ? 'glassesMenu__item--active' : '' %>">OPTICAL</a></li>
+      <li class="glassesMenu__item"><a href="./sunglasses.html" class="<%= current == 'sunglasses' ? 'glassesMenu__item--active' : '' %>">SUNGLASSES</a></li>
+      <li class="glassesMenu__item"><a href="./function.html" class="<%= current == 'functional' ? 'glassesMenu__item--active' : '' %>">FUNCTIONAL</a></li>
+    </ul>
+  </nav>
 
   <%- contents %>
 
