--- a/app/assets/style/components/_components.scss
+++ b/app/assets/style/components/_components.scss
@@ -24,4 +24,23 @@
     li:last-child{
         background-color: #f2f2f2;
     }
+    @include mobile(){
+        width: 100%;
+        li{
+            width: 11%;
+        }
+        a{
+            width: 100%;
+            font-size: 16px;
+            line-height: 24px;
+            padding: 12px 0;
+            text-align: center;
+        }
+        li:first-child, li:last-child{
+            width: auto;
+            a{
+                padding:11px 14px 12px 13px;
+            }
+        }
+    }
 }
