--- a/app/assets/style/layout/_nav.scss
+++ b/app/assets/style/layout/_nav.scss
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
     &__item{
-        width: 33%;
+        width: calc(100% / 3);
         border: 1px solid #DCDCDC;
         &--active{
             border-bottom: 8px solid $subColor;
@@ -17,5 +17,20 @@
         text-align: center;
         color: black;
         font-weight: bold;
+    }
+
+    @include tablet(){
+        justify-content: space-between;
+        max-width: none;
+        padding: 0;
+    }
+
+    @include mobile(){
+        a{
+            font-size: 16px;
+            line-height: 24px;
+            padding: 16px 0;
+        }
+        
     }
 }
