--- a/app/assets/style/pages/_glasses.scss
+++ b/app/assets/style/pages/_glasses.scss
@@ -1,7 +1,19 @@
-.opticalBanner{
+.glassesBanner{
     display: flex;
     img{
         width: 50%;
+    }
+    &--mobile{
+        display: none;
+    }
+
+    @include tablet(){
+        &--pc{
+            display: none;
+        }
+        &--mobile{
+            display: block;
+        }
     }
 }
 
@@ -17,14 +29,14 @@
     margin-bottom: 32px;
 }
 
-.opticalItems{
+.glassesItems{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
 }
 
-.opticalItem{
-    width: 24%;
+.glassesItem{
+    width: calc((100% - (24 *3px)) / 4);
     margin-bottom: 80px;
     img{
         display: block;
@@ -50,5 +62,17 @@
             width: 24px;
             height: 24px;
         }
+    }
+
+    &--sun{
+        width: calc((100% - (24px * 2)) / 3);
+    }
+
+    @include tablet(){
+        width: calc((100% - 24px) / 2);
+    }
+    @include mobile(){
+        width: 100%;
+        margin-bottom: 24px;
     }
 }
