--- a/app/assets/style/pages/_index.scss
+++ b/app/assets/style/pages/_index.scss
@@ -3,17 +3,24 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-}
-.bannerWrap{
-    min-height: 787px;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    &__content{
-        text-align: right;
+    &Wrap{
+        min-height: 787px;
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+        &__content{
+            text-align: right;
+        }
+        &__btn{
+            padding: 6px 12px;
+        }
     }
-    &__btn{
-        padding: 6px 12px;
+
+    @include mobile(){
+        background-image: url('../images/home-header-sm.png');
+        &Wrap{
+            min-height: 396px;
+        }
     }
 }
 
@@ -39,6 +46,10 @@
                     margin-bottom: 0;
                 }
             }
+
+            @include mobile(){
+                width: 100%;
+            }
         }
         &__icon{
             width: 84px;
@@ -63,12 +74,33 @@
             font-style: italic;
         }
     }
+    @include tablet(){
+        justify-content: center;
+        &__item{
+            width: 60%;
+            margin-bottom: 24px;
+            &:last-child{
+                margin-bottom: 0;
+            }
+        }
+    }
+    @include mobile(){
+        &__item{
+            width: 100%;
+        }
+    }
 }
 
 .collab{
     background-image: url('../images/index-bg.png');
     background-position: center;
     background-repeat: no-repeat;
+    @include tablet(){
+        background-image: url('../images/index-bg-md.png');
+    }
+    @include mobile(){
+        background-image: url('../images/index-bg-sm.png');
+    }
 }
 .design{
     display: flex;
@@ -91,6 +123,22 @@
             display: none;
         }
     }
+    @include tablet(){
+        flex-wrap: wrap;
+        &__item{
+            margin-bottom: 24px;
+        }
+    }
+    @include mobile(){
+        &__img{
+            &--pc{
+                display: none;
+            }
+            &--mobile{
+                display: block;
+            }
+        }
+    }
 }
 
 .customer{
@@ -107,6 +155,20 @@
         img{
             width: 100%;
             display: block;
+        }
+        @include tablet(){
+            width: 49%;
+            margin-bottom: 24px;
+            &:nth-last-child(-n+2){
+                margin-bottom: 0;
+            }
+        }
+        @include mobile(){
+            width: 100%;
+            margin-bottom: 16px;
+            &:nth-child(3){
+                margin-bottom: 16px;
+            }
         }
     }
 }
@@ -154,77 +216,8 @@
     min-width: 416px;
     padding: 16px 0;
     margin: 0 auto;
-}
 
-@media(max-width: 992px){
-    .sample{
-        justify-content: center;
-        &__item{
-            width: 60%;
-            margin-bottom: 24px;
-            &:last-child{
-                margin-bottom: 0;
-            }
-        }
-    }
-    .collab{
-        background-image: url('../images/index-bg-md.png');
-    }
-    .design{
-        flex-wrap: wrap;
-        &__item{
-            margin-bottom: 24px;
-        }
-    }
-    
-    .customer__item{
-        width: 49%;
-        margin-bottom: 24px;
-        &:nth-last-child(-n+2){
-            margin-bottom: 0;
-        }
-    }
-}
-
-@media (max-width: 767px){
-    .banner{
-        background-image: url('../images/home-header-sm.png');
-        &Wrap{
-            min-height: 396px;
-        }
-    }
-
-    .introContent__item{
-        width: 100%;
-    }
-
-    .sample__item{
-        width: 100%;
-    }
-
-    .collab{
-        background-image: url('../images/index-bg-sm.png');
-    }
-    .design{
-        &__img{
-            &--pc{
-                display: none;
-            }
-            &--mobile{
-                display: block;
-            }
-        }
-    }
-
-    .customer__item{
-        width: 100%;
-        margin-bottom: 16px;
-        &:nth-child(3){
-            margin-bottom: 16px;
-        }
-    }
-
-    .submit{
+    @include mobile(){
         min-width: 0;
         width: 100%;
     }
