--- a/app/layout2.ejs
+++ b/app/layout2.ejs
@@ -45,7 +45,7 @@
         <div>
           <ul class="bottomMenu">
             <li class="bottomMenu__item"><a href="./index.html" class="font--white">首頁</a></li>
-            <li class="bottomMenu__item"><a href="" class="font--white">系列鏡框</a></li>
+            <li class="bottomMenu__item"><a href="./optical.html" class="font--white">系列鏡框</a></li>
             <li class="bottomMenu__item"><a href="" class="font--white">門市據點</a></li>
             <li class="bottomMenu__item"><a href="" class="font--white">部落格</a></li>
             <li class="bottomMenu__item"><a href="" class="font--white">常見問題</a></li>
